# Streamlit_portfolio

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  analytics.py  chat.py  components.py  config.py  data.py  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  styles.py
.github/workflows/: ci.yml  deploy.yml
.streamlit/: secrets.toml
tests/: __init__.py  conftest.py  test_analytics.py  test_components.py  test_config.py  test_data.py  test_main.py
