[project]
name = "streamlit-portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair==5.5.0",
    "attrs==24.2.0",
    "blinker==1.9.0",
    "cachetools==5.5.0",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "groq==0.4.2",
    "idna==3.10",
    "jinja2==3.1.4",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "narwhals==1.15.1",
    "numpy==2.1.3",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.0.0",
    "protobuf==5.29.0",
    "pyarrow==18.1.0",
    "pydeck==0.9.1",
    "pygments==2.18.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.0",
    "pytz==2024.2",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rich==13.9.4",
    "rpds-py==0.21.0",
    "six==1.16.0",
    "smmap==5.0.1",
    "streamlit==1.40.2",
    "tenacity==9.0.0",
    "toml==0.10.2",
    "tornado==6.4.2",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "watchdog==6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
omit = [
    "tests/*",
    "*/__pycache__/*",
    ".venv/*",
]
